--- a/templates/stream.html
+++ b/templates/stream.html
@@ -44,7 +44,7 @@ on the nature of the stream.</p>
             <tr>
                 <td></td>
                 <td><p>{{ server.name }}</p></td>
-                <td><p>{{ stream.getStreamAddress(server) }}</p></td>
+                <td><a href="{{ stream.getStreamAddress(server) }}">Direct link</a></td>
                 <td>
                     <div class="offState" width=75px">
                         <input type="radio" name="{{ server.name }}"
